static/home.css
@font-face {
    font-family: "color-emoji";
    src: local("Apple Color Emoji"),
         local("Segoe UI Emoji"), 
         local("Segoe UI Symbol"),
         local("Noto Color Emoji");
}

@keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

:root {
    font-family: franklin-gothic-condensed, sans-serif, color-emoji;
    --magazine-letter-width: clamp(15px, 9vw, 150px);
    --magazine-punc-width: calc(var(--magazine-letter-width) * 2 / 3);
    --header-height: 4rem;
    --bg-color: white;
    --text-color: black;
    --grid-item-size: 15rem;
    --overlay-padding: 3rem;
    --header-image-size: 2rem;
}

* {
    margin: 0;
    /* -webkit-backface-visibility:  hidden;
    backface-visibility: hidden; */
     -webkit-tap-highlight-color:  transparent;
     -webkit-perspective: 1000;
     perspective: inherit;
}

body {
    margin: 0;
    background-color: var(--bg-color);
    /* transition: background-color 0.5s; */
    width: fit-content;
    overflow: scroll;
    -webkit-overflow-scrolling: touch;
}

#header {
    width: 100vw;
    display: flex;
    justify-content: space-between;
    height: var(--header-height);
    position: relative;
    /* flex-basis: 100%; */
    z-index: 100;
}

.header_ul {
    list-style-type: none;
    display: flex;
    width: max-content;
    margin: 0;
    padding: 0;
}

.header_item {
    margin: 1rem;
    font-size: 1.3rem;
}

.header_link, .dropdown_link, .dropdown_title {
    color: var(--text-color);
    /* transition: color 0.5s; */
    text-decoration: none;
    text-transform: lowercase;
    height: var(--header-image-size);
    display: inline-block;
    line-height: var(--header-image-size);
    text-align: center;
    background-color: var(--bg-color);
}

.dropdown_item {
    height: auto;
    display: block;
}


#mobile_header {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    width: 100vw;
    box-sizing: border-box;
    display: none;
}

#mobile_header_icon {
    fill: var(--text-color);
    width: var(--header-height);
    height: var(--header-height);
    margin: 1rem;
}

#mobile_header_icon:hover, #mobile_exit_button:hover, #mobile_back_but {
    cursor: pointer;
}

#mobile_exit_button, #mobile_back_button {
    fill: var(--text-color);
    width: var(--header-height);
    height: var(--header-height);
    position: absolute;
    top: 1rem;
    right: 1rem;
    /* transition: fill 0.5s; */
}

#mobile_back_button {
    left: 1rem;
    right: auto;
    display: none;
}

.mobile_links_ul {
    list-style: none;
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    height: 60vh;
}

.mobile_links_ul > li {
    padding: 0;
    margin: 0;
    font-size: 3rem;
    /* transition: color 0.5s; */
}

#mobile_links_wrapper {
    z-index: 1;
    position: absolute;
    background-color: var(--bg-color);
    /* transition: background-color 0.5s; */
    width: 100vw;
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    display: none;
}

#mobile_games, #mobile_themes {
    display: none;
}
.dropdown_title {
    height: max-content;
}

.dropdown_ul {
    display: none;
    position: absolute;
    list-style-type: none;
    padding: 0;
    text-align: left;
    width: auto;
    height: max-content;
    float: right;
}

.dropdown_item:hover {
    cursor: pointer;
}

.dropdown_title:hover .dropdown_ul {
    display: block;
}

#adam_gunn_caption {
    font-size: 2rem;
    text-align: center;
    margin: 1rem 0;
    display: block;

    /* opacity: 0;
    animation: fadein 1s linear 2.25s;
    animation-fill-mode: forwards; */
    text-transform: lowercase;
}

.magazine {
    object-fit: contain;
    display: inline-block;
}

.magazine:not(#PUNC) {
    width: var(--magazine-letter-width);
    height: var(--magazine-letter-width);
}

#PUNC {
    width: var(--magazine-punc-width);
    height: var(--magazine-punc-width);
}

/* #A1 {
    padding-left: calc(var(--magazine-punc-width) / 2);
} */

#about_link {
    text-decoration: none;
    pointer-events: none;
}

/* 
.centerer {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    position: absolute;
    top: 0;
    width: 100vw;
    z-index: -1;
} */

/* #home_page, #about_page {
    height: calc(100vh - var(--header-height));
    width: 100vw;
    display: block;
    margin: 0;
    padding: 0;
    align-items: center;
    justify-content: center;
    transform: translate(0, calc(0 - var(--header-height)));

} */

/* #about_page {
    margin: 2rem;
} */

@keyframes spin {
    0% {
        transform: rotateX(-45deg) rotateY(20deg);
    }
    50% {
        transform: rotateX(45deg) rotateY(20deg);
    }
}

main {
    padding: 0;
    margin: 0;
}

.page_title {
    color: var(--text-color);
    /* transition: color 0.5s; */
    font-size: 8rem;
    margin: 0;
    padding: 0;
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    width: max-content;
    display: inline-block;
    perspective-origin: center;
    text-transform: lowercase;
}

.page_title:hover {
    cursor: default;
}

.page_content {
    color: var(--text-color);
    /* transition: color 0.5s; */
    font-size: 1rem;
    font-family: lust-text, sans-serif, color-emoji;
    text-decoration: none;
}

#about_wrapper .page_content {
    line-height: 1.2rem;
}

#about_wrapper {
    text-align: center;
    perspective: 20rem;
    max-width: 25rem;
    transform-style: preserve-3d;
    margin: 0;
    position: absolute;
    transform: translate(-50%, -50%);
    top: 50%;
    left: 50%;
}

#magazine_centerer {
    margin: 0;
    position: relative;
    width: 100%;
    height: 100vh;
    transform: translateY(calc(-1 * var(--header-height)));
    display: flex;
    justify-content: center;
    align-items: center;
}
/* ... */

